--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Feedback Filler",
     "version": "1.0",
-    "manifest_version": 2,
+    "manifest_version": 3,
     "description": "Whose got the time to sit and click each of those option. Let this extension do it for ya..",
     "icons": {
         "16": "icons/checker_16x16.png",
@@ -10,18 +10,14 @@
         "128": "icons/checker_128x128.png"
       },
     "background": {
-      "scripts": [
-        "background.js"
-      ],
-      "persistent": true
+    	"service_worker": "background.js"
     },
-    "browser_action": {
+    "action": {
       "default_title": "Fill em Up!"
     },
     "permissions": [
-      "https://*/*",
-      "http://*/*",
       "tabs",
-      "activeTab"
+      "activeTab",
+      "scripting"
     ]
   }
